--- a/roles/webserver/defaults/main.yml
+++ b/roles/webserver/defaults/main.yml
@@ -5,3 +5,6 @@ webserver_package_name: httpd
 webserver_service_name: httpd
 webserver_document_root: /var/www/html
 webserver_server_name: 44.201.9.70 # Replace with your desired server name
+webserver_vhost_port: 80
+webserver_admin_email: joachim.bryan1@gmail.com
+webserver_log_dir: /var/log/httpd
