--- a/inventory.ini
+++ b/inventory.ini
@@ -1,5 +1,5 @@
 [web]
-slave1 ansible_ssh_host=44.201.9.70
+slave1 ansible_host=44.201.9.70 ansible_user=ec2-user
 
 [db]
-slave2 ansible_ssh_host=44.214.100.29
+slave2 ansible_host=44.214.100.29 ansiblie_user=ec2-user
