--- a/inventory.ini
+++ b/inventory.ini
@@ -2,4 +2,4 @@
 slave1 ansible_host=44.201.9.70 ansible_user=ec2-user
 
 [db]
-slave2 ansible_host=44.214.100.29 ansiblie_user=ec2-user
+slave2 ansible_host=44.214.100.29 ansible_user=ec2-user
